added tf-idf,removed image dataset and index files

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -15,12 +15,12 @@
           </header>
 
           <main role="main" class="inner cover">
-			<h1 class="cover-heading">Ask me out..</h1>
+			<h1 class="cover-heading">Ask me..</h1>
 			<form>
 				<div class="form-row align-items-center">
 					<div class="col-auto">
 					  <label class="sr-only" for="inlineFormInput">Name</label>
-					  <input type="text" class="form-control mb-2 mb-sm-0" id="inlineFormInput" placeholder="Jane Doe">
+					  <input type="text" class="form-control mb-2 mb-sm-0" id="inlineFormInput" placeholder="ask here..">
 					</div>
 					<div class="col-auto">
 					  <label class="sr-only" for="inlineFormInputGroup">text query</label>
